--- a/Backend/proyecto_backend/package.json
+++ b/Backend/proyecto_backend/package.json
@@ -22,6 +22,7 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "pg": "^8.11.0",
     "socket.io": "^4.7.2"
   },
