--- a/Frontend/proyect_frontend/package.json
+++ b/Frontend/proyect_frontend/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-builders/custom-webpack": "^16.0.1",
     "@angular/animations": "^16.0.5",
     "@angular/common": "^16.0.5",
     "@angular/compiler": "^16.0.5",
