--- a/Backend/proyecto_backend/package.json
+++ b/Backend/proyecto_backend/package.json
@@ -13,16 +13,15 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.1",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
+    "multiparty": "^4.2.3",
     "pg": "^8.11.0",
     "socket.io": "^4.7.2"
   },
